# futures_orchestra

./: API_REFERENCE.md  Cargo.toml  README.USAGE.md  README.md
examples/: basic_usage.rs  completion_notifier_usage.rs  concurrency_limit.rs  forceful_shutdown.rs  graceful_shutdown.rs  individual_cancellation.rs  label_cancellation.rs  task_panic.rs
src/: capacity_gate.rs  error.rs  handle.rs  lib.rs  manager.rs  notifier.rs  task.rs  task_queue.rs
tests/: notifier_tests.rs  pool_tests.rs
