[package]
name = "futures_orchestra"
version = "1.1.3"
edition = "2021"
authors = ["Excerion Sun <dev@excsn.com>"]
description = "A Tokio-based task pool for managing concurrent execution of futures with queuing, labeling, notifications and cancellation."
license = "MPL-2.0"
repository = "https://github.com/excsn/futures_orchestra"
readme = "README.md"
keywords = ["async", "tokio", "concurrency", "future", "pool"]
categories = ["asynchronous", "concurrency"]

[dependencies]
fibre = { version = "^0" }
dashmap = "^5.5"
futures = { version = "^0.3" } 
futures-intrusive = "^0.5"
futures-util = { version = "^0.3", default-features = false } 
tokio = { version = "^1", features = ["rt", "macros", "time"] }
tokio-util = { version = "^0.7" }
parking_lot = "^0.12"
lazy_static = "^1.4"
thiserror = "^2.0"
tracing = "^0.1"

[dev-dependencies]
tokio = { version = "^1", features = ["full"] }
tracing-subscriber = { version = "^0.3", features = ["fmt", "env-filter"] }
rand = "^0.9"